--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -32,11 +32,17 @@ jobs:
       - uses: ./.github/actions/setup-nix
         with:
           cachix-auth-token: ${{ secrets.CACHIX_AUTH_TOKEN }}
-      - name: Build package
-        run: nix build -L
+      - name: Build kanata
+        run: nix build .#kanata -L
+      - name: Build kanata-vk-agent (macOS only)
+        if: runner.os == 'macOS'
+        run: nix build .#kanata-vk-agent -L
+      - name: Build karabiner-driverkit (macOS only)
+        if: runner.os == 'macOS'
+        run: nix build .#karabiner-driverkit -L
       - name: Check version
         run: |
-          version=$(nix run . -- --version)
+          version=$(nix run .#kanata -- --version)
           echo "Detected version: $version"
           if ! echo "$version" | grep -E "^kanata [0-9]+\.[0-9]+\.[0-9]+"; then
             echo "Error: Version output does not match expected format"
