feat: add lib.checkKanataConfig for config validation
Add a library function that validates Kanata configuration files using
`kanata --check`. This allows users to integrate config validation into
their flake checks and catch configuration errors in CI.

The flake now includes:
- lib.checkKanataConfig: Function to create config validation derivations
- checks.kanata-config-basic: Test check using tests/basic.kbd
- CI integration: `nix flake check` runs in GitHub Actions

Usage in user flakes:
```nix
checks.kanata-config = kanata-overlay.lib.checkKanataConfig {
  pkgs = nixpkgs.legacyPackages.${system};
  configFile = ./kanata.kbd;
};
```

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -40,3 +40,5 @@ jobs:
             exit 1
           fi
           echo "Version check passed: $version"
+      - name: Run flake checks (config validation)
+        run: nix flake check -L
